Fixed z-index bug of main menu

--- a/src/styles/_mainmenu.scss
+++ b/src/styles/_mainmenu.scss
@@ -11,6 +11,7 @@
   position: absolute;
   top: 0;
   left: 0;
+  z-index: 9998;
   background: rgba(255,255,255,0.7);
   width: 100%;
   height: 100%;
